# xnor_nn

./: CMakeLists.txt  README.md  Toolchain_arm_gcc.cmake
example/: CMakeLists.txt  simple_convolution.c  simple_convolution.cpp
experiment/: arm_fma_latency.cpp  conv.cpp  convolution_forward_performance.cpp  data_binarizer.cpp  data_binarizer_correctness.cpp  fma_latency.cpp  get_convolution_operations_count.cpp  intrin_conv_popcnt.cpp  optimized_conv.cpp  optimized_conv_popcnt.cpp  projector.py  runtime_compile.cpp  vec_xnor.cpp  vec_xnor_main.cpp
experiment/efficiency/: Makefile  a.out  efficiency.cpp  main.cpp  perf.data  perf.data.old
include/: xnor_nn.h  xnor_nn.hpp  xnor_nn_types.h
script/: projector.py
scripts/: caffe_speedup.awk
src/: CMakeLists.txt  bcast_base.cpp  bcast_base.hpp  bcast_binarize_data.cpp  bcast_binarize_data.hpp  bcast_binarize_weights.cpp  bcast_binarize_weights.hpp  bcast_calculate_k.cpp  bcast_convolution.cpp  bcast_convolution.hpp  bcast_convolution_avx.hpp  bcast_convolution_default.hpp  bcast_convolution_neon.hpp  bcast_instantiator.hxx  bcast_template_parameters.hpp  binarize_data.h  binarize_weights.h  binarize_weights_float.cpp  common_convolution.cpp  convolution.c  convolution.cpp  convolution_forward.h  convolution_traits.cpp  convolution_traits.hpp  data_binarizer.c  data_binarizer.cpp  direct_base.cpp  direct_base.hpp  direct_binarize_data.cpp  direct_binarize_data.hpp  direct_binarize_weights.cpp  direct_binarize_weights.hpp  direct_convolution.cpp  direct_convolution.hpp  direct_convolution_avx.hpp  direct_convolution_default.hpp  direct_convolution_neon.hpp  direct_template_parameters.hpp  empty_function.cpp  implementation.cpp  (+22 more)
src/arm/: bcast_convolution_neon.cpp  bcast_convolution_neon.hpp  direct_convolution_neon.cpp  direct_convolution_neon.hpp
src/default/: bcast_convolution_default.cpp  bcast_convolution_default.hpp  direct_convolution_default.cpp
src/utils/: convolution_logger.hpp  cpuid.hpp  logger.hpp  timer.hpp  utils.h  utils.hpp
src/x86/: bcast_convolution_atom.cpp  bcast_convolution_avx.cpp  direct_convolution_avx.cpp  direct_convolution_avx.hpp
test/: CMakeLists.txt
test/gtest/: CMakeLists.txt  common.hpp  test_binarization.cpp  test_convolution_compare_with_reference.cpp  test_convolution_forward_direct.cpp  test_convolution_forward_optimized.cpp  test_convolution_reference_forward.cpp  test_convolution_xnor_fwd.cpp  test_data_bin.cpp  test_data_bin_bcast.cpp  test_data_bin_direct.cpp  test_data_bin_optimized.cpp  test_data_bin_reference.cpp  test_weights_bin.cpp  test_weights_bin_bcast.cpp  test_weights_bin_direct.cpp  test_weights_bin_reference.cpp
test/perf/: CMakeLists.txt  test_only_convolution.cpp  test_simple_net.cpp
